src/snapshots/alma__parser__tests__expression_parser-22.snap
---
source: src/parser.rs
expression: "parse(\"hello ()\")"

---
Input:

hello ()

Result:

Node {
    start: 0,
    end: 8,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: FnCall(
            Node {
                start: 0,
                end: 5,
                line: 1,
                column: 0,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        None,
                        Identifier(
                            Node {
                                start: 0,
                                end: 5,
                                line: 1,
                                column: 0,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                },
                            },
                        ),
                    ),
                },
            },
            [
                Node {
                    start: 6,
                    end: 8,
                    line: 1,
                    column: 6,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Unit,
                    },
                },
            ],
        ),
    },
}
