src/snapshots/alma__parser__tests__expression_parser-24.snap
---
source: src/parser.rs
expression: "parse(\"- 5\")"

---
Input:

- 5

Result:

Node {
    start: 0,
    end: 3,
    line: 1,
    column: 0,
    value: Unary(
        Node {
            start: 0,
            end: 1,
            line: 1,
            column: 0,
            value: Minus,
        },
        Node {
            start: 2,
            end: 3,
            line: 1,
            column: 2,
            value: Float(
                5.0,
            ),
        },
    ),
}
