src/snapshots/alma__parser__tests__expression_parser-25.snap
---
source: src/parser.rs
expression: "parse(\"incr (-5)\")"

---
Input:

incr (-5)

Result:

Node {
    start: 0,
    end: 8,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: FnCall(
            Node {
                start: 0,
                end: 4,
                line: 1,
                column: 0,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        Node {
                            start: 0,
                            end: 4,
                            line: 1,
                            column: 0,
                            value: Identifier_ {
                                name: "incr",
                                case: Camel,
                            },
                        },
                    ),
                },
            },
            [
                Node {
                    start: 6,
                    end: 8,
                    line: 1,
                    column: 6,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Unary(
                            Node {
                                start: 6,
                                end: 7,
                                line: 1,
                                column: 6,
                                value: Minus,
                            },
                            Node {
                                start: 7,
                                end: 8,
                                line: 1,
                                column: 7,
                                value: Expression_ {
                                    typ: RefCell {
                                        value: None,
                                    },
                                    expr: Float(
                                        5.0,
                                    ),
                                },
                            },
                        ),
                    },
                },
            ],
        ),
    },
}
