src/snapshots/alma__parser__tests__expression_parser-27.snap
---
source: src/parser.rs
expression: "parse(\"1 - -5\")"

---
Input:

1 - -5

Result:

Node {
    start: 0,
    end: 6,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Binary(
            Node {
                start: 2,
                end: 3,
                line: 1,
                column: 2,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        None,
                        Identifier(
                            Node {
                                start: 2,
                                end: 3,
                                line: 1,
                                column: 2,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                },
                            },
                        ),
                    ),
                },
            },
            Node {
                start: 2,
                end: 3,
                line: 1,
                column: 2,
                value: Binop_ {
                    typ: Substraction,
                    precedence: 14,
                    associativity: Ltr,
                    fn_: Identifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            },
            [
                Node {
                    start: 0,
                    end: 1,
                    line: 1,
                    column: 0,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Float(
                            1.0,
                        ),
                    },
                },
                Node {
                    start: 4,
                    end: 6,
                    line: 1,
                    column: 4,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Unary(
                            Node {
                                start: 4,
                                end: 5,
                                line: 1,
                                column: 4,
                                value: Minus,
                            },
                            Node {
                                start: 5,
                                end: 6,
                                line: 1,
                                column: 5,
                                value: Expression_ {
                                    typ: RefCell {
                                        value: None,
                                    },
                                    expr: Float(
                                        5.0,
                                    ),
                                },
                            },
                        ),
                    },
                },
            ],
        ),
    },
}
