src/snapshots/alma__parser__tests__expression_parser-3.snap
---
source: src/parser.rs
expression: "parse(\"()\")"

---
Input:

()

Result:

Node {
    start: 0,
    end: 2,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Unit,
    },
}
