src/snapshots/alma__parser__tests__expression_parser-30.snap
---
source: src/parser.rs
expression: "parse(\"\\\\a -> a\")"

---
Input:

\a -> a

Result:

Node {
    start: 0,
    end: 7,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Lambda(
            [
                Node {
                    start: 1,
                    end: 2,
                    line: 1,
                    column: 1,
                    value: Identifier(
                        Node {
                            start: 1,
                            end: 2,
                            line: 1,
                            column: 1,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 1,
                                },
                                case: Camel,
                            },
                        },
                    ),
                },
            ],
            Node {
                start: 6,
                end: 7,
                line: 1,
                column: 6,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        Node {
                            start: 6,
                            end: 7,
                            line: 1,
                            column: 6,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 1,
                                },
                                case: Camel,
                            },
                        },
                    ),
                },
            },
        ),
    },
}
