src/snapshots/alma__parser__tests__expression_parser-31.snap
---
source: src/parser.rs
expression: "parse(\"\\\\a -> \\\\b -> a\")"

---
Input:

\a -> \b -> a

Result:

Node {
    start: 0,
    end: 13,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Lambda(
            [
                Node {
                    start: 1,
                    end: 2,
                    line: 1,
                    column: 1,
                    value: Identifier(
                        Node {
                            start: 1,
                            end: 2,
                            line: 1,
                            column: 1,
                            value: Identifier_ {
                                name: "a",
                                case: Camel,
                            },
                        },
                    ),
                },
            ],
            Node {
                start: 6,
                end: 13,
                line: 1,
                column: 6,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Lambda(
                        [
                            Node {
                                start: 7,
                                end: 8,
                                line: 1,
                                column: 7,
                                value: Identifier(
                                    Node {
                                        start: 7,
                                        end: 8,
                                        line: 1,
                                        column: 7,
                                        value: Identifier_ {
                                            name: "b",
                                            case: Camel,
                                        },
                                    },
                                ),
                            },
                        ],
                        Node {
                            start: 12,
                            end: 13,
                            line: 1,
                            column: 12,
                            value: Expression_ {
                                typ: RefCell {
                                    value: None,
                                },
                                expr: Identifier(
                                    Node {
                                        start: 12,
                                        end: 13,
                                        line: 1,
                                        column: 12,
                                        value: Identifier_ {
                                            name: "a",
                                            case: Camel,
                                        },
                                    },
                                ),
                            },
                        },
                    ),
                },
            },
        ),
    },
}
